@@ -1,0 +1,11 @@
+;Backend routes
+backend_index.type="rewrite"
+backend_index.match="/(backend|backend/)$"
+backend_index.route.module="index"
+backend_index.route.controller="backend_index"
+backend_index.route.action="index"
+backend_post_index.type="rewrite"
+backend_post_index.match="/backend/(posts|posts)$"
+backend_post_index.route.module="index"
+backend_post_index.route.controller="backend_posts"
+backend_post_index.route.action="index"
