@@ -7,6 +7,9 @@
 3.新功能:增加request扩展
 4.新功能:增加Html扩展
 
+[O2O_1.0.0.1 2015-07-10 张春生]
+1.新功能:增加error_handler处理
+
 --备注分类
 1、新功能：
 2、Bug:
